<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.permission.PermissionFragment">


    <ImageView
        android:id="@+id/location_permission_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_welcome_image"
        app:layout_constraintBottom_toTopOf="@+id/permission_required_text"
        app:layout_constraintEnd_toEndOf="@+id/permission_required_text"
        app:layout_constraintStart_toStartOf="@+id/permission_required_text"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/location_permission_image" />

    <TextView
        android:id="@+id/permission_required_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/permission_required"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/description_permission_text"
        app:layout_constraintEnd_toEndOf="@+id/description_permission_text"
        app:layout_constraintStart_toStartOf="@+id/description_permission_text" />

    <TextView
        android:id="@+id/description_permission_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/description_text"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/continue_button"
        app:layout_constraintEnd_toEndOf="@+id/continue_button"
        app:layout_constraintStart_toStartOf="@+id/continue_button" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/continue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>